<resources>
    <string name="app_name">Guessit</string>
    <string name="prefs_file">com.dezeta.guessit.PREFERENCE_FILE_KEY</string>
    <string name="action_settings">Ajustes</string>
    <string name="first_fragment_label">Menú</string>
    <string name="second_fragment_label">Niveles</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="serie_diaria">Serie Diaria</string>
    <string name="categor_a">Extra</string>
    <string name="niveles">Niveles</string>
    <string name="duelo">Duelo</string>
    <string name="ajusts">Ajustes</string>
    <string name="ajustes">Ajustes</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="juego_local">Juego Local</string>
    <string name="img_select">Selecciona una Imagen</string>
    <string name="tvDIalog">Elija un nivel</string>
    <string name="btnDialog">Aceptar</string>
    <string name="contentImg1">Primera Imagen a elegir</string>
    <string name="tvImg1">Imagen 1</string>
    <string name="btnDailyGuess">Adivinar</string>
    <string name="lblDialogCategoryRed">Rojo.</string>
    <string name="lblDialogCategoryGreen">Verde.</string>
    <string name="tvDialogCategoryRed">Indica que has seleccionado una serie con una categoría, pero esta no coincide con la serie que debes encontrar.</string>
    <string name="tvDialogCategoryGreen">Significa que la categoría de la serie que has seleccionado es la misma que la de la serie a adivinar.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="loginactivity">LoginActivity</string>
    <string name="ConfPasswordLogin">Confirmar Contraseña</string>
    <string name="Password">Contraseña</string>
    <string name="mailLogin">Correo Electrónico</string>
    <string name="signOut">Cerrar sesión</string>
    <string name="Local_game_borrar_nivel">Borrar nivel</string>
    <string name="CreateId">Identificador del nivel</string>
    <string name="CreateName">Entidad o concepto a adivinar</string>
    <string name="CreateDifficult">Introduce la dificultad:</string>
    <string name="default_web_client_id">190629402896-mcqnfa02pucpnbvv5vtlaijigjaqam4n.apps.googleusercontent.com</string>
    <string name="category_pais_diario">Pais Diario</string>
    <string name="estad">Estadísticas</string>
    <string name="guess_series">Series Adivinadas:</string>
    <string name="paises_adivinados">Paises Adivinados:</string>
    <string name="guess_player">Jugadores Adivinados:</string>
    <string name="guess_game">Juegos Adivinados:</string>
    <string name="contentImgProfile">Profile</string>
    <string name="login_user_name">Nombre de Usuario</string>
    <string name="drawer_pre_point">Tienes</string>
    <string name="drawer_post_point">puntos</string>
    <string name="Daily_Title">Juegos diarios y ranking</string>
    <string name="test_title">Test</string>
    <string name="menu_friend">Amigos</string>
    <string name="login_name">Nombre de Usuario</string>
    <string name="login_lblname">Introduzca un Nombre de Usuario</string>
    <string name="login_notConexion">Modo sin conexión</string>
    <string name="nav_delete_user">Eliminar Cuenta</string>
    <string name="nav_email">Correo</string>
    <string name="nav_name_user">Nombre de Usuario</string>
    <string name="tvMessageOfline">No hay conexión</string>
    <string name="tvMessageOfflineMode">Estas en Modo sin conexión. Para salir cierre sesión</string>
    <string name="theme">Tema oscuro</string>
    <string name="Theme_title">Tema</string>
    <string name="pref_aboutUs">about_us</string>
    <string name="pref_lab_aboutUs">Sobre mi</string>
    <string name="pref_owner">owner</string>
    <string name="pref_lab_owner">David Zambrana Romero</string>
    <string name="owner_summary">Creador de la app</string>
    <string name="pref_gitHub">GitHub</string>
    <string name="pref_lab_github">GitHub</string>
    <string name="pref_summary_github">https://github.com/daviZ30</string>
    <string name="pref_LinkedIn">LinkedIn</string>
    <string name="pref_lab_LinkedIn">LinkedIn</string>
    <string name="pref_summary_linkedIn">https://www.linkedin.com/in/david-zambrana-8042912a9/</string>
    <string name="pref_email">Contacto</string>
    <string name="pref_lab_email">Contacto</string>
    <string name="email_summary">davidzambrana86@gmail.com</string>
    <string name="idEmptyError">Introduce un identificador</string>
    <string name="idDuplicateError">Introduce un identificador nuevo</string>
    <string name="nameEmtyError">Introduce una entidad o concepto a adivinar</string>
    <string name="nameDuplicateError">Introduce una entidad o concepto a adivinar no existente</string>
    <string name="difficultEmtyError">Introduce una dificultad</string>
    <string name="imageEmtyError">Se deben introducir las tres imágenes</string>
    <string name="imageEqualsError">Las imagenes no puedes ser iguales</string>
    <string name="CreateSuccess">Creado con exito</string>
    <string name="helpLocal">Introduce la entidad o concepto a adivinar</string>
    <string name="helpOnline">Si saltas la imagen tendrás que sacrificar una vida</string>
    <string name="Congratulation">!Felicidades¡</string>
    <string name="point2500">Has desbloqueado todos los niveles obteniendo 2500 puntos</string>
    <string name="ConfirmationDailyDialog">¿Desea sacrificar una vida para mostrar la lista completa?</string>
    <string name="setPositiveButton">Si</string>
    <string name="setNegativeButton">No</string>
    <string name="CompleteLevel">"Has superado el nivel"</string>
    <string name="preDailyPoint">Has obtenido</string>
    <string name="postDailyPoint">puntos</string>
    <string name="HelpRedMessage">Una categoría en rojo indica que has seleccionado una serie con una categoría, pero esta no coincide con la serie que debes encontrar.</string>
    <string name="HelpGreenMessage">Una categoría en verde significa que la categoría de la serie que has seleccionado es la misma que la de la serie a adivinar.</string>
    <string name="preHelpCountry">El pais</string>
    <string name="preHelpSerie">La serie</string>
    <string name="preHelpFootball">El jugador</string>
    <string name="preHelpLocal">La entidad o concepto</string>
    <string name="endWith">termina por:</string>
    <string name="failed">Has fallado</string>
    <string name="failedMessage">Has superado el limite de intentos</string>
    <string name="CongratulatoryDuel">Has logrado una racha de:</string>
    <string name="getting">consiguiendo</string>
    <string name="levelSerie">Tendrás que adivinar una serie</string>
    <string name="levelPlayer">Tendrás que adivinar un futbolista</string>
    <string name="LevelTest">Tendrás que adivinar tres cuestionarios</string>
    <string name="level20Duel">Tendrás que hacer una racha de 20 en Duelo</string>
    <string name="level10Duel">Tendrás que hacer una racha de 10 en Duelo</string>
    <string name="levelCountry">Tendrás que adivinar un pais</string>
    <string name="payLevel">¿Desea gastar 25 puntos para desbloquear el nivel?</string>
    <string name="notPayLevel">No dispones de 25 puntos o más para desbloquear el nivel</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="deleteError">Error al borrar</string>
    <string name="deleteSuccess">Borrado con éxito</string>
    <string name="levelNotFound">Nivel no encontrado</string>
    <string name="introduceLevel">Introduzca algun nivel para jugar</string>
    <string name="chooseLevel">¿Desea elegir el nivel?</string>
    <string name="SignErrorGoogle">No se ha podido iniciar sesión con google</string>
    <string name="attention">Atención</string>
    <string name="reviseMail">Por favor, revisa tu correo electrónico y verifica tu dirección haciendo clic en el enlace que te hemos enviado. Dispones de 24 Horas</string>
    <string name="LoginName">Introduce un nombre de usuario</string>
    <string name="LoginExistName">El nombre introducido ya existe</string>
    <string name="EmailNotVerified">Por favor, revisa tu correo electrónico y verifica tu dirección haciendo clic en el enlace que te hemos enviado.</string>
    <string name="googleAccountMessage">Ya dispone de una cuenta de google asociada a este correo, seleccione continuar con google</string>
    <string name="introduceName">Introduce un nombre</string>
    <string name="introducePassword">Introduce la contraseña</string>
    <string name="introduceMail">Introduce el correo electrónico</string>
    <string name="MailFormatError">El formato del correo es invalido</string>
    <string name="PasseordFormatError">La contraseña debe contener letras, número y 8 caracteres como mínimo</string>
    <string name="EqualsPassword">Las contraseñas no son iguales</string>
    <string name="SignIn">Login</string>
    <string name="SignUp">Registrar</string>
    <string name="SignError">Se ha producido un error autenticando al usuario</string>
    <string name="NullError">Se ha producido un error NULL</string>
    <string name="DeleteAccount">¿Desea eliminar la cuenta?</string>
    <string name="TestSuccess">Has superado el test obteniendo</string>
    <string name="TestError">No has superado el test</string>
    <string name="login_Continue">Continuar</string>
    <string name="Login_SignUp_layout">Registrar</string>
    <string name="dialog_title_category">Categorias encontradas:</string>
    <string name="dialog_Ok">Ok</string>
    <string name="dialog_ok">Ok</string>
    <string name="create_Level">Crear nivel</string>
    <string name="createImg2">Imagen 2</string>
    <string name="createImg3">Imagen 3</string>
    <string name="nextDaily">Siguiente</string>
    <string name="previousDaily">Anterior</string>
    <string name="showListDaily">"Mostrar Lista "</string>
    <string name="user">User</string>
    <string name="Daily_Player">Jugador Diario</string>
    <string name="daily_Serie">Serie Diaria</string>
    <string name="series">Series</string>
    <string name="players">Jugadores</string>
    <string name="Countries">Paises</string>
    <string name="score">Racha:</string>
    <string name="Duel_Title">¿Que serie tiene más puntuación\n en IMDB?</string>
    <string name="Less">Menos</string>
    <string name="More">Más</string>
    <string name="addFriend">Añadir amigo</string>
    <string name="game">Jugar</string>
    <string name="createNewLevel">Crear nuevo nivel</string>
    <string name="levelHelp">Si superas los 24 niveles obtendras</string>
    <string name="points">puntos</string>
    <string name="levelHelp2">Pulsa el siguiente nivel para desbloquear</string>
    <string name="idioma">Idioma</string>
    <string name="pref_language">Idioma_pref</string>
    <string name="themeTitle">Tema oscuro</string>
    <string name="LanguageTitle">Idioma de la Aplicación</string>
    <string name="showPasword">Mostrar Contraseña</string>
    <string name="notification">Otorgue permiso de notificación desde la configuración de la aplicación</string>
    <string name="NotTitle">Juego diario disponible</string>
    <string name="NotMessage">Ya está disponible el juego diario</string>
    <array name="entriesLanguege">
        <item>Español</item>
        <item>Ingles</item>
    </array>
    <array name="entriesValuesLanguege">
        <item>es</item>
        <item>en</item>
    </array>
    <string name="NotCountryTitle">País diario desbloqueado</string>
    <string name="NotCountryMessage">El país diario ya está disponible</string>
    <string name="NotSerieTitle">Serie diaria desbloqueada</string>
    <string name="NotSerieMessage">La serie diaria está disponible.</string>
    <string name="NotFootballTitle">Jugador diario desbloqueado</string>
    <string name="NotFootballMessage">El jugador diario está disponible</string>
</resources>