<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.MenuFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLocalGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/BlueRange5"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDuel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLocalGame"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/game" />

            <TextView
                android:id="@+id/tvLocalGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/juego_local"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDaily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/BlueRange1_2"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgDaily"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/tvDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/serie_diaria"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/BlueRange1_4"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDaily">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgCategory"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/category_menu" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/categor_a"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLevels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/BlueRange3"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCategory">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLevels"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/levels" />

            <TextView
                android:id="@+id/tvLevels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/niveles"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/BlueRange4"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvLevels">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgDuel"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/duel" />

            <TextView
                android:id="@+id/tvDuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/duelo"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.github.nikartm.button.FitButton
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        app:fb_backgroundColor="@color/gris_claro"
        app:fb_icon="@drawable/about_us"
        app:fb_iconHeight="40dp"
        app:fb_iconMarginStart="14dp"
        app:fb_iconPosition="left"
        app:fb_iconWidth="40dp"
        app:fb_rippleColor="#42757575"
        app:fb_shape="rectangle"
        app:fb_text="@string/sobre_nosotros"
        app:fb_textColor="#222222"
        app:fb_textPaddingStart="16dp"
        app:fb_textSize="17sp"
        app:fb_textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.github.nikartm.button.FitButton
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        app:fb_backgroundColor="#989898"
        app:fb_icon="@drawable/setting"
        app:fb_iconHeight="40dp"
        app:fb_iconMarginStart="14dp"
        app:fb_iconPosition="left"
        app:fb_iconWidth="40dp"
        app:fb_rippleColor="#42757575"
        app:fb_shape="rectangle"
        app:fb_text="@string/ajustes"
        app:fb_textColor="#222222"
        app:fb_textPaddingStart="16dp"
        app:fb_textSize="17sp"
        app:fb_textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>